<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!--<ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_shopping_cart_24"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/small_padding"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ce_formulaire_vous_permet_de_cr_er_un_produit_en_un_instant"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:padding="15dp"

                />

            <com.google.android.material.textfield.TextInputLayout

                app:hintAnimationEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                app:startIconCheckable="true"
                app:startIconDrawable="@drawable/add_shop"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:maxLength="50"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                app:hintAnimationEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginBottom="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#615E59"
                    android:textColor="@color/black"
                    android:inputType="text|textMultiLine"
                    android:lines="5"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                app:hintAnimationEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prix"
                android:layout_marginBottom="16dp"
                tools:ignore="HardcodedText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal|number"
                    android:maxLength="50"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                app:hintAnimationEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantit_disponible"
                android:layout_marginBottom="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantité"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal|number"
                    android:maxLength="50"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                app:hintAnimationEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stock_limite"
                android:layout_marginBottom="30dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stockalert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal|number"
                    android:maxLength="50"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/MyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:textAlignment="center"
                android:backgroundTint="@color/design_default_color_secondary"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>